--- a/css/styles01.css
+++ b/css/styles01.css
@@ -98,3 +98,61 @@ input[type='submit']:hover {
   width: 310px;
   text-align: right;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+html, body{
+  height: 100%;
+  font-weight: 800;
+}
+
+body{
+  background: #e0e0e0;
+  font-family: cursive;
+}
+
+svg {
+    display: block;
+    font: 8em 'Montserrat';
+    width: 100%;
+    height: 400px;
+    margin: 0 auto;
+}
+
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 6% 29%;
+    stroke-width: 5px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text-copy:nth-child(1){
+	stroke: #561a7e;
+	animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+	stroke: #cf1578;
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: #e8d21d;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: #039fbe;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: #fd175c;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
+}
