--- a/css/styles01.css
+++ b/css/styles01.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, Verdana, sans-serif;
   font-size: 90%;
-  color: #666;
+  color: #666666;
   background-color: #f8f8f8;
 }
 li {
@@ -113,9 +113,9 @@ body{
 
 svg {
     display: block;
-    font: 8em 'Montserrat';
+    font: 9em 'Montserrat';
     width: 100%;
-    height: 400px;
+    height: 300px;
     margin: 0 auto;
 }
 
@@ -156,3 +156,84 @@ svg {
 @keyframes stroke-offset{
 	100% {stroke-dashoffset: -35%;}
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-transform: capitalize;
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Poppins', sans-serif;
+}
+
+.services{
+    padding: 10px 0px;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
+.service{
+    padding: 55px;
+    margin: 0px 100px;
+    box-shadow: 0px 0px 20px rgba(255, 13, 154, 0.479);
+}
+
+
+
+
+
+  
+
+@media  (max-width: 991px){
+
+    
+    header{
+        height: 0vh;
+        padding: 300px 0px;
+        background-position: center center;
+
+    }
+    .header-content{
+        flex-direction: column;
+        text-align: center;
+        align-items: center ;
+        padding: 0px 20px;
+    }
+  
+
+    .services{
+        flex-direction: column;
+        padding: 20px 10px 0px 10px;
+    }
+    .service{
+        margin-bottom: 20px;
+    }
+   
+}
+.capitales{
+  font-size: 20px;
+  color: #561a7e;
+   font: 'Montserrat';
+  }
+  .tipos{
+    font-size: 15px;
+    color:  #cf1578;
+    font: 'Montserrat';
+
+  }
+  .fecha{
+    font-size: 13px;
+    color: #039fbe;
+    font:  'Montserrat';
+  }
+  .hora{
+    font-size: 13px;
+    color: #e8d21d;
+    font:  'Montserrat';
+  }
+    
+
+/* form */
+
+
