--- a/css/styles01.css
+++ b/css/styles01.css
@@ -255,15 +255,18 @@ body {
     
 }
 .subscription-form {
-    min-width: 150px;
+    min-width: 450px;
     text-align: center;
     background-color: #cccccc9c;
-    padding: 10px;
-    display: flex;
+    padding: 10px 0px;
     flex-direction: column;
+    display:flex;
     align-items: center;
     border: none;
     border-radius: 60px 100px;
+    Justify-Content: Space-Evenly;
+    width: 50%;
+    margin: 0 auto;
 }
   
 h2 {
