--- a/css/styles01.css
+++ b/css/styles01.css
@@ -12,6 +12,7 @@ body {
   font-size: 90%;
   color: #666666;
   background-color: #e0e0e0;
+  width: 100%;
 }
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
