--- a/css/index.css
+++ b/css/index.css
@@ -1,65 +1,47 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-  }
-
-  header {
-    background-color: #3768B0;
-    color: #BB9500;
-    text-align: center;
-    padding: 20px;
-  }
-
-  h1, h2 {
-    margin: 0;
-  }
-
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-
-  th, td {
-    border: 1px solid #B2685F;
-    padding: 10px;
-    text-align: left;
-  }
-
-  th {
-    background-color: #FC6E5B;
-    color: #428DFC
-  }
-
-  a {
-    color: #1776CA;
-  }
-
-  @media screen and (max-width: 768px) {
-    h1 {
-      font-size: 28px;
-    }
-
-    .container {
-      padding: 10px;
-    }
-
-    table {
-      font-size: 14px;
-    }
-
-    th, td {
-      padding: 5px;
-    }
-  }
-
-  
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #252839;
+}
+ul{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+  ul li{
+  position: relative;
+  list-style: none;
+}
+ul li a{
+  position: relative;
+  font-size: 3em;
+  text-decoration: none;
+  line-height: 1em;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: 1px rgba(255,255,255,0.5);
+}
+ul li a::before{
+  content: attr(data-text);
+  position: absolute;
+  color: var(--clr);
+  width: 0;
+  overflow: hidden;
+  transition: 1s;
+  border-right: 8px solid  var(--clr);
+  -webkit-text-stroke: 1px  var(--clr);
+}
+ul li a:hover::before{
+  width: 100%;
+  filter: drop-shadow(0 0 25px var(--clr));
+} 
