--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,9 @@ body{
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #252839;
+  background-image: url('../images/index.jpg');
+  background-size: cover;
+  background-position: 5%;
 }
 ul{
   position: relative;
