--- a/css/css03.css
+++ b/css/css03.css
@@ -6,18 +6,23 @@
     
 }
 body{
-    background-color: #5e5e5e;
-        font-family: Raleway, sans-serif;
-        text-align: center;
-        margin: 0;
-        padding: 1.5rem;
-        color: white;
-        min-height: 100vh;
-        display: block;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-    
+
+    background-color: #31082788;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    margin: none;
+    padding: 0.5rem;
+    color: rgb(255, 255, 255);
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+ 
+  
+}
+p {
+    margin: auto;
 }
 /* === removing default button style ===*/
 .button {
@@ -30,10 +35,10 @@ body{
   
   /* button styling */
   .button {
-    --border-right: 6px;
-    --text-stroke-color: rgba(0, 0, 0, 0.932);
-    --animation-color: #37FF8B;
-    --fs-size: 2em;
+    --border-right: 2px;
+    --text-stroke-color: rgb(255, 255, 255);
+    --animation-color: #c263a5;
+    --fs-size: 3em;
     letter-spacing: 3px;
     text-decoration: none;
     font-size: var(--fs-size);
@@ -77,9 +82,9 @@ body{
 .navbar {
     margin: auto;
     padding: 0.5rem 1.5rem;
-    background: #bdbdbd;
+    background: #ffa3dc5e;
     border-radius: 1rem;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 12px rgba(255, 255, 255, 0.329);
 }
 
 .nav-links {
@@ -104,17 +109,17 @@ a {
     position: absolute;
     padding: 0.5rem 0;
     margin: 0.5rem -0.5rem;
-    background: antiquewhite;
-    color: rgba(166, 243, 204, 0.747);
-    box-shadow: 0 4px 12px rgba(142, 255, 167, 0.808);
+    background: rgb(255, 255, 255);
+    color: rgba(235, 183, 240, 0.747);
+    box-shadow: 0 4px 12px rgba(247, 185, 244, 0.555);
     border-radius: 0.5rem;
     font-size: 10px;
     display: none;
 }
 
 .nav-link:hover {
-    background-color: rgba(139, 250, 144, 0.616);
-    color: #474747;
+    background-color: rgba(248, 180, 237, 0.616);
+    color: #fcfcfc;
     border-radius: 0.5rem;
 }
 
@@ -140,8 +145,8 @@ a {
 }
 
 .drop-down li:hover {
-    background: rgb(27, 252, 128);
-    color: #3ce993;
+    background: rgb(219, 38, 210);
+    color: #f163ea;
     border-radius: 0.5rem;
 }
 
@@ -169,31 +174,18 @@ a {
   inherits: true;
 }
 
-body{
-    background-color: #5e5e5e;
-        font-family: Raleway, sans-serif;
-        text-align: center;
-        margin: 0;
-        padding: 1.5rem;
-        color: white;
-        min-height: 100vh;
-        display: block;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-    
-}
 p {
 	margin: 10px;
+    
 }
 
 :root {
 	--d: 2000ms;
-	--angle: 960deg;
+	--angle: 60deg;
 	--gradX: 1140%;
 	--gradY: 140%;
-	--c1: #32f0b0;
-	--c2: rgba(67, 150, 168, 0.1);
+	--c1: #ff0fcb;
+	--c2: rgba(255, 255, 255, 0.541);
 }
 
 .wrapper {
@@ -243,3 +235,19 @@ p {
 		--gradY: 0%;
 	}
 }
+
+.map-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9 aspect ratio (dividir la altura por el ancho) */
+}
+
+.map-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
